--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@
       .vader-sprite {
         width: 100px;
         height: 120px;
-        background: url('https://media.tenor.com/00QNYjdpIpYAAAAj/brandon-james-greer-darth-vader.gif') no-repeat center center;
+        background: url('https://custom-doodle.com/wp-content/uploads/doodle/newjeans/stunning-darth-vader-doodle.gif') no-repeat center center;
         background-size: contain;
         position: absolute;
         left: 0;
